# mpdtrackr

./: .gitignore  Cargo.toml  README.md  artists.json  install.sh  songs.json  todo.norg
.github/workflows/: build.yml
.sqlx/: query-295ea13949f93d749cd561e385100f21359fddb293785c2bf7776538a4d9f45b.json  query-654ecbadf9b6e71609a5e0f35d3f1e042183b159aa63a1424a1af863ec47fcfe.json  query-6da854a9ce03cfa27fa39c2dc25c6ae8c7c779bcfe0e5edfc5ff1a7de1307930.json  query-6e5b25a48132b8559abeca9603f18d2ff8341af5926ea6d08374a4068df0c92f.json  query-75b6ff015801b4263f56be0e337f0fc5b94ddfa6b17551c704e54325607d9af8.json  query-7f3eaff624126f1c64edf07490213c6bba7daccd4c45fdf3ab4ebeab318c58a5.json  query-c96e36c04228be12fc386e98749a773bdc1efdb3bb6920e2da5f9064dd428e27.json
service/: mpdtrackr.service
src/: lib.rs  main.rs  structs.rs  utils.rs
