[package]
name = "mpdtrackr"
authors = ["Cyanism"]
description = "A simple MPD tracker"
version = "1.2.0"
edition = "2021"
homepage = "https://github.com/Cyanistic/mpdtrackr"
keywords = ["mpd", "tracking", "statistics"]
license = "GPL-3.0"
name = "mpdtrackr"
readme = "README.md"
repository = "https://github.com/Cyanistic/mpdtrackr"
version = "2.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
json = "0.12"
mongodb = "2.7"
mpd = "0.0.12"
regex = "1.10"
tokio = { version = "1.33", features = ["macros"] }
