[package]
name = "mpdtrackr"
authors = ["Cyanism"]
description = "MPD listening time tracker with versatile stats and sync"
version = "2.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.31", features = ['serde'] }
clap = { version = "4.4.7", features = ['derive'] }
dirs = "5.0"
pretty_env_logger = "0.5"
fs2 = "0.4"
futures = "0.3"
log = "0.4.20"
mpd = "0.1"
serde = "1"
serde_json = "1"
sqlx = { version = "0.7", features = ['json', 'sqlite', 'runtime-tokio', 'chrono'] }
tokio = { version = "1.33", features = ['full'] }
